--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -22,3 +22,18 @@
   background-color: aqua;
   border-radius: 5px;
 }
+
+.logout {
+  position: fixed;
+  top: 10px;
+  right: 20px;
+}
+
+.logout button {
+  background-color: brown;
+  color: white;
+  cursor: pointer;
+  border-radius: 5px;
+  font-weight: bold;
+  padding: 7px;
+}
